--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 113 points<br>
+Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 118 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -45,31 +45,34 @@ Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
+<li><div class="title">Traveler (Level 4)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1380 status
-   1181 symbolic-ref
-     92 diff
-     76 add
-     62 commit
-     39 checkout
-     11 svn
-     11 mv
+   1842 status
+   1539 symbolic-ref
+    118 add
+    117 diff
+     92 commit
+     59 checkout
+     16 svn
+     12 mv
      11 achievements
+     10 branch
+      9 rm
       8 stash
-      7 reset
-      6 rebase
-      6 branch
+      8 reset
+      8 rebase
       4 config
       3 fetch
       2 Wed
       2 Thu
       1 show
-      1 rm
       1 reflog
       1 push
+      1 Mon
+      1 merge
       1 blame
 </pre>
 <script type="text/javascript">
